<resources>
    <string name="app_name">readit</string>
    <string name="first_fragment_label">readit</string>
    <string name="second_fragment_label">readit</string>
    <string name="login">login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="or_sign_up"><u>or sign up here</u></string>
    <string name="sign_up">sign up</string>
    <string name="or_login"> <u>or login here</u> </string>
    <string name="display_name">display name</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_feed">Feed</string>
    <string name="title_create">Create</string>
    <string name="make_post">make a post:</string>
    <string name="title_notifications">notifications</string>
    <string name="title_settings">Settings</string>
    <string name="welcome">welcome</string>
    <string name="login_instruct">enter your region and phone number to create your account.</string>
    <string name="disclaimer">by continuing, you confirm that you are authorized to use this phone number and agree to receive text message. The operator may apply its own rates.</string>
    <string name="verify">verify with code:</string>
    <string name="verify_desc">a 6 digit code was just sent to </string>
    <string name="dash">-</string>
    <string name="code_error">verification code incorrect or an error occurred, please try again.</string>
    <string name="display_name_hint">JohnDoe1</string>
    <string name="display_name_prompt">enter your display name:</string>
    <string name="image_button_desc">continue</string>
    <string name="log_out">log out</string>
    <string name="account">account</string>
    <string name="settings_lowercase">settings</string>
    <string name="thanks_placeholder">you have: 🙏 </string>
    <string name="delete_account">delete account</string>
    <string name="change_name">change display name</string>
    <string name="change_name_colon">change display name:</string>
    <string name="about_title">what is readit?</string>
    <string name="about_text">readit is an academic social media platform made for students by
    students. it is a place where students can help others or get help on their own. in each class,
    there is a place to ask questions and a place to view tips from students who have completed
    the course. readit makes for a great academic resource for any student with any course
    load. enjoy!</string>
    <string name="change_high_school">change high school</string>
    <string name="length_placeholder_200">0/200</string>
    <string name="length_placeholder_1000">0/1000</string>
    <string name="add_title">add title</string>
    <string name="next">next</string>
    <string name="body_hint">add body (optional)</string>
    <string name="choose_class">choose class</string>
    <string name="settings_title_placeholder">Setting Title</string>
    <string name="settings_desc_placeholder">Setting Description</string>
    <string name="send">send post</string>
    <string name="titleError">post needs a title</string>
    <string name="tip">tip</string>
    <string name="question">question</string>
    <string name="change"><u>change</u></string>
    <string name="title_activity_choose_high_school">ChooseHighSchoolActivity</string>
    <string name="show_school">make your high school visible in post</string>
    <string name="choose_post">choose post type</string>
    <string name="show_thanks">show thanks</string>
    <string name="show_replies">show replies</string>
    <string name="notification_settings">notification settings</string>

    <!--    TODO delete this string array if it never ends up getting used-->
    <string name="hello_world">Hello Square World!</string>
    <string-array name="country_codes_array">
        <item>+1, US/CA</item>
        <item>+44, UK</item>
        <item>+86, CHN</item>
        <item>+91, IN</item>
    </string-array>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string-array name="classes">
        <!--        math courses-->
        <item>Algebra I</item>
        <item>Algebra II</item>
        <item>Geometry</item>
        <item>Trigonometry</item>
        <item>Pre Calculus</item>
        <item>AP Calculus AB</item>
        <item>AP Calculus BC</item>
        <item>Statistics</item>
        <!--        social studies courses-->
        <item>AP world history</item>
        <item>AP european history</item>
        <item>AP US government and politics</item>
        <item>AP US history</item>
        <item>US history</item>
        <item>World history</item>
        <item>European history</item>
        <item>Political science</item>
        <!--        english courses-->
        <item>AP language and composition</item>
        <item>AP literature and composition</item>
        <item>American literature</item>
        <item>British literature</item>
        <item>Comparative literature</item>
        <item>Contemporary literature</item>
        <item>World literature</item>
        <item>English (9th grade)</item>
        <item>English (10th grade)</item>
        <item>English (11th grade)</item>
        <item>English (12th grade)</item>
        <item>Creative writing</item>
        <item>Journalism</item>
        <item>Rhetoric</item>
        <item>Composition</item>
        <item>Poetry</item>
        <item>Debate</item>
        <!--        science courses-->
        <item>AP biology</item>
        <item>AP chemistry</item>
        <item>AP Environmental Science</item>
        <item>AP physics C</item>
        <item>AP physics 1</item>
        <item>AP physics 2</item>
        <item>Earth science</item>
        <item>Physical science</item>
        <item>Biology</item>
        <item>Chemistry</item>
        <item>Organic chemistry</item>
        <item>Physics</item>
        <item>Life science</item>
        <item>Environmental science</item>
        <item>Astronomy</item>
        <item>Zoology</item>
        <item>Oceanography</item>
        <item>Forensic science</item>
        <item>Botany</item>
    </string-array>

    <string-array name="highSchools">
        <item>Abington Friends School</item>
        <item>Abington Jhs</item>
        <item>Abington Shs</item>
        <item>Academy Of The New Church Boys School</item>
        <item>Agora Cyber Cs</item>
        <item>Aim Academy</item>
        <item>Arcola Intrmd School</item>
        <item>Bishop Mcdevitt High School</item>
        <item>Boyertown Area Jhs-east</item>
        <item>Central Montco Technical High School</item>
        <item>Cheltenham High School</item>
        <item>Christopher Dock Mennonite High School</item>
        <item>Coventry Christian Schools</item>
        <item>Eastern Center For Arts &amp; Technology</item>
        <item>Friends Central School</item>
        <item>Germantown Academy</item>
        <item>Gwynedd Mercy Academy High School</item>
        <item>Harriton Shs</item>
        <item>Hatboro-horsham Shs</item>
        <item>Huntingdon Valley Christian Academy</item>
        <item>I S Kosloff Torah Academy High School For Girls</item>
        <item>Indian Creek Mennonite School</item>
        <item>Jenkintown Middle/high School</item>
        <item>La Salle College High School</item>
        <item>Lansdale Catholic High School</item>
        <item>Lower Merion High School</item>
        <item>Lower Moreland High School</item>
        <item>Martin Luther School</item>
        <item>Merion Mercy Academy</item>
        <item>Methacton High School</item>
        <item>Milagre Kids School</item>
        <item>Mount St Joseph Academy</item>
        <item>Nexus School</item>
        <item>Norristown Area High School</item>
        <item>North Montco Tech Career Center</item>
        <item>North Penn Shs</item>
        <item>Our Lady Of Confidence</item>
        <item>Penn View Christian School</item>
        <item>Pennbrook Ms</item>
        <item>Penndale Ms</item>
        <item>Pennfield Ms</item>
        <item>Pennsylvania Virtual Cs</item>
        <item>Perkiomen School</item>
        <item>Perkiomen Valley High School</item>
        <item>Philadelphia-montgomery Christian Academy</item>
        <item>Plymouth-whitemarsh Shs</item>
        <item>Pope John Paul Ii High School</item>
        <item>Pottsgrove Shs</item>
        <item>Pottstown Shs</item>
        <item>Roosevelt Altern School</item>
        <item>Souderton Area Shs</item>
        <item>Spring-ford Ms 7th Grade Center</item>
        <item>Spring-ford Ms 8th Grade Center</item>
        <item>Spring–ford Shs 9—12 Center</item>
        <item>Springfield Twp High School</item>
        <item>St Basil Academy</item>
        <item>St Gabriels Hall</item>
        <item>The Baldwin School</item>
        <item>The Haverford School</item>
        <item>The Hill School</item>
        <item>The Pathway School</item>
        <item>The Quaker School At Horsham</item>
        <item>The Shipley School</item>
        <item>Upper Dublin High School</item>
        <item>Upper Merion High School</item>
        <item>Upper Moreland High School</item>
        <item>Upper Perkiomen High School</item>
        <item>Valley Forge Baptist Academy</item>
        <item>Vantage Academy</item>
        <item>Vantage Academy At Upper Merion</item>
        <item>Villa</item>
        <item>Wayside Christian School</item>
        <item>Western Montgomery Ctc</item>
        <item>Wissahickon Shs</item>
        <item>Wordsworth Academy</item>
        <item>Wyncote Academy</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_report">ReportActivity</string>
</resources>