<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotificationSettingsActivity">

    <TextView
        android:id="@+id/notificationSettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/notification_settings"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/settingsItem1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/show_thanks"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/notificationSettingsTitle"
        />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="25dp"
        android:scaleX="1.5"
        android:layout_alignParentEnd="true"
        android:scaleY="1.5"
        android:layout_below="@id/notificationSettingsTitle"/>

    <TextView
        android:id="@+id/settingsTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/show_replies"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_below="@id/settingsItem1"
        />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="25dp"
        android:scaleX="1.5"
        android:layout_alignParentEnd="true"
        android:scaleY="1.5"
        android:layout_below="@id/switch1"
        />
</RelativeLayout>


